--- a/flowEditor/package.json
+++ b/flowEditor/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "flowEditor",
   "version": "0.0.1",
   "private": false,
   "scripts": {
@@ -12,8 +13,10 @@
     "lodash": "4.17.15",
     "vue": "^2.5.2",
     "vue-codemirror": "^4.0.6",
-    "vue-router": "^4.2.5",
-    "vuedraggable": "2.23.0"
+    "vue-router": "^3.2.0",
+    "vuedraggable": "2.23.0",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -55,8 +58,10 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
+    "vue-persist": "^0.4.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuex-persist": "^3.1.3",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
